--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,8 @@
                     {% for line in site.address.first.lines %}
                         {{ line }} <br>
                     {% endfor %}
+               
+                   <br/><a href="mailto:odluw@uw.edu" class="btn btn-theme">odluw@uw.edu</a>
                 </p>
                 <p>
                     {% for network in site.social %}
