--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,9 +12,7 @@
                 <p>
                     {% for line in site.address.first.lines %}
                         {{ line }} <br>
-                    {% endfor %}
-               
-                   <br/><a href="mailto:odluw@uw.edu" class="btn btn-theme">odluw@uw.edu</a>
+                    {% endfor %}<a href="mailto:odluw@uw.edu">odluw@uw.edu</a>
                 </p>
                 <p>
                     {% for network in site.social %}
