--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,10 +2,11 @@
     <div class="container">
         <div class="row"> 
             <div class="col-md-12 himg">
-                <img src="{{ "/assets/img/logo.svg" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 25px; PADDING-TOP: 25px;" class="img-responsive" height="450px" width="450px">
+                <img src="{{ "/assets/img/DA2I_logo.png" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 25px; PADDING-TOP: 25px;" class="img-responsive" height="450px" width="450px">
                 <p>
-                <font color="white">Open Data Literacy is a collaborative project led by the Information School at the University of Washington</p> 
-                <p>in partnership with public institutions that create, manage, and publish open data.</font>
+                <font color="white">A2I</p>
+                <p>Access to information and the SDGs</p>
+                <p>How can meaningful access to information contribute to advancing the UN Sustainable Development Goals? </font>
                 <p>
                 <p>
                 <p>
