--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -25,7 +25,7 @@ body {
 	background: #ffffff; 
 	margin: 0; 
 	height: 100%; 
-	color: {{ site.colors.secondary }};
+	color: #000000;
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
 	}
@@ -42,7 +42,7 @@ p {
 	font-weight: 400;
 	font-size: 14px; 
 	line-height: 24px;
-	color: {{ site.colors.secondary }}; 
+	color: #000000; 
 	margin-top: 10px; 
 }
 
@@ -95,12 +95,12 @@ a:focus {
 ::-moz-selection  {
 	color: #fff;
 	text-shadow:none;
-	background:{{ site.colors.secondary }};
+	background: black;
 }
 ::selection {
 	color: #fff;
 	text-shadow:none;
-	background:{{ site.colors.secondary }};
+	background:black;
 }
 
 .centered {
@@ -132,21 +132,21 @@ a:focus {
 }
 
 .navbar-default .navbar-nav > li > a:hover {
-	color: {{ site.colors.primary }};
+	color: #e81e25;
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: {{ site.colors.primary }};
+	color: #e81e25;
 	background-color: transparent;
 }
 
 .navbar-default {
-	background-color: {{ site.colors.secondary }};
+	background-color: #e81e25;
 	border-color: transparent;
 }
 
 .dropdown-menu {
-	background: {{ site.colors.secondary }};
+	background: black;
 }
 
 .dropdown-menu > li > a {
@@ -157,8 +157,8 @@ a:focus {
 
 .btn-theme {
   color: #fff;
-  background-color: {{ site.colors.secondary }};
-  border-color: {{ site.colors.secondary }};
+  background-color: black;
+  border-color: black;
   margin: 4px;
 }
 .btn-theme:hover,
@@ -167,8 +167,8 @@ a:focus {
 .btn-theme.active,
 .open .dropdown-toggle.btn-theme {
   color: #fff;
-  background-color: {{ site.colors.primary }};
-  border-color: {{ site.colors.primary }};
+  background-color: #e81e25;
+  border-color: #e81e25;
 }
 
 .dmbutton:hover,
@@ -218,7 +218,7 @@ a:focus {
 }
 
 .hline {
-	border-bottom: 2px solid {{ site.colors.secondary }};
+	border-bottom: 2px solid black;
 }
 
 .hline-w {
@@ -230,7 +230,7 @@ a:focus {
 ################################################################# */
 
 #headerwrap {
-	background-color: {{ site.colors.primary }};
+	background-color: #e81e25;
 	min-height: 0px;
 	padding-top: 100px;
 	padding-bottom: 50px;
@@ -258,7 +258,7 @@ a:focus {
 }
 
 #service i {
-	color: {{ site.colors.primary }};
+	color: #e81e25;
 	font-size: 60px;
 	padding: 15px;
 }
@@ -306,15 +306,15 @@ a:focus {
 {
 	height:100%;
 	width:100%;
-	background-color:{{ site.colors.primary }};
-	background-color:rgba({{ site.colors.primary_rgb }},.9);
+	background-color:#e81e25;
+	background-color:rgba(232,30,37,.9);
 	text-align:center;
 }
 
 /* Testimonials Wrap */
 #twrapback {
-    background-color: {{ site.colors.primary }};
-    background-color:rgba({{ site.colors.primary_rgb }},.8);
+    background-color: #e81e25;
+    background-color:rgba(232,30,37,.8);
     position: absolute;
     top: 0;
     left: 0;
@@ -372,7 +372,7 @@ a:focus {
 #footerwrap {
 	padding-top: 60px;
 	padding-bottom: 60px;
-	background: {{ site.colors.secondary }};
+	background: black;
 }
 
 #footerwrap p {
@@ -390,7 +390,7 @@ a:focus {
 }
 
 #footerwrap i:hover {
-	color: {{ site.colors.primary }}
+	color: #e81e25
 }
 
 /*	################################################################
@@ -399,7 +399,7 @@ a:focus {
 /* General Tweaks */
 
 #blue {
-	background: {{ site.colors.primary }};
+	background: #e81e25;
 	margin-top: 60px;
 	margin-bottom: 60px;
 	padding-top: 25px;
@@ -434,7 +434,7 @@ a:focus {
 }
 
 .ctitle {
-	color: {{ site.colors.primary }};
+	color: #e81e25;
 	font-weight: 700;
 	margin-bottom: 15px;
 }
@@ -450,7 +450,7 @@ csmall {
 }
 
 .badge-theme {
-	background: {{ site.colors.primary }};
+	background: #e81e25;
 }
 
 /* Contact Page */
