--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row"> 
             <div class="col-md-12 himg">
-                <p><h1 font color="white">A2I</h1><img src="{{ "/assets/img/DA2I_logo.png" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 15px; PADDING-TOP: 15px;" class="img-responsive" height="250px" width="250px"></p>
+                <p><h1 font size="20">A2I</h1><img src="{{ "/assets/img/DA2I_logo.png" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 15px; PADDING-TOP: 15px;" class="img-responsive" height="250px" width="250px"; float: right></p>
                 <p><font color="white">Access to information and the SDGs</p>
                 <p>How can meaningful access to information contribute to advancing the UN Sustainable Development Goals? </font>
               
