--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,8 @@
     <div class="container">
         <div class="row"> 
             <div class="col-md-12 himg">
-                <p><h1 style="font-size:70px">A2I</h1><img src="{{ "/assets/img/DA2I_logo.png" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 15px; PADDING-TOP: 15px; float: none" class="img-responsive" height="250px" width="250px"></p>
-            <br>    
-            <p style="font-size:40px">Access to information and the SDGs</p>
+                <p><h1 style="font-size:70px">A2I</h1><img src="{{ "/assets/img/DA2I_logo.png" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 15px; PADDING-TOP: 15px; float: right" class="img-responsive" height="250px" width="250px"></p>  
+            <p class="clear" style="font-size:40px">Access to information and the SDGs</p>
                 <p style="font-size:20px">How can meaningful access to information contribute to advancing the UN Sustainable Development Goals? </font>
               
             </div>
