--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row"> 
             <div class="col-md-12 himg">
-                <p><h1 style="font-size:70px">A2I<img src="{{ "/assets/img/DA2I_logo.png" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 15px; PADDING-TOP: 15px; float: right" class="img-responsive" height="250px" width="250px"></h1></p>  
+                <p><h1 style="font-size:70px">A2I<img src="{{ "/assets/img/DA2I_logo.png" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 15px; PADDING-TOP: 15px; float: none" class="img-responsive" height="250px" width="250px"></h1></p>  
             </div>
 </div><!-- /row -->  
     <div class="row"> 
