--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,12 +2,8 @@
     <div class="container">
         <div class="row"> 
             <div class="col-md-12 himg">
-                <p><h1 style="font-size:70px">A2I<img src="{{ "/assets/img/DA2I_logo.png" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 15px; PADDING-TOP: 15px; float: none" class="img-responsive" height="250px" width="250px"></h1></p>  
-            </div>
-</div><!-- /row -->  
-    <div class="row"> 
-            <div class="col-md-12 himg">       
-    <div class="clear"><p style="font-size:40px; color:white">Access to information and the SDGs</p>
+                <img src="{{ "/assets/img/DA2I_logo.png" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 15px; PADDING-TOP: 15px" class="img-responsive" height="250px">     
+                <div class="clear"><p style="font-size:40px; color:white">Access to information and the SDGs</p>
                 <p style="font-size:20px; color:white">How can meaningful access to information contribute to advancing the UN Sustainable Development Goals? </font>
         </div>
 
