--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row"> 
             <div class="col-md-12 himg">
-                <img src="{{ "/assets/img/DA2I_logo.png" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 15px; PADDING-TOP: 5px" class="img-responsive" height="200px">     
-                <div class="clear"><p style="font-size:40px; color:white; PADDING-BOTTOM: 15px; PADDING-TOP: 15px"">Access to information and the SDGs</p>
-                <p style="font-size:20px; color:white">How can meaningful access to information contribute to advancing the UN Sustainable Development Goals? </font>
+                <img src="{{ "/assets/img/DA2I_logo.png" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 5px; PADDING-TOP: 5px" class="img-responsive" height="100px">     
+                <div class="clear"><p style="font-size:40px; color:white; PADDING-BOTTOM: 15px; PADDING-TOP: 15px">Access to information and the SDGs</p>
+                <p style="font-size:20px; color:white; PADDING-BOTTOM: 15px; PADDING-TOP: 50px">How can meaningful access to information contribute to advancing the UN Sustainable Development Goals? </font>
         </div>
 
             </div>
