--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -456,13 +456,13 @@ csmall {
 
 /* Contact Page */
 #contactwrap {
-	background: url(../img/contact.jpg) no-repeat center top;
+	background: white;
 	margin-top: -60px;
 	padding-top:0px;
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
-	min-height: 400px;
+	min-height: 100px;
 	width: 100%;
 	
     -webkit-background-size: 100%;
