--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <div class="col-md-12 himg">
                 <img src="{{ "/assets/img/DA2I_logo.png" | prepend: site.baseurl }}" style="PADDING-BOTTOM: 5px; PADDING-TOP: 5px; height: 250px" class="img-responsive">     
                 <div class="clear"><p style="font-size:40px; color:white; PADDING-BOTTOM: 15px; PADDING-TOP: 15px">Access to information and the SDGs</p>
-                <p style="font-size:20px; color:white; PADDING-BOTTOM: 15px; PADDING-TOP: 50px">How can meaningful access to information contribute to advancing the UN Sustainable Development Goals? </font>
+                <p style="font-size:20px; color:white; PADDING-BOTTOM: 15px; PADDING-TOP: 50px">How can meaningful access to information contribute to advancing the UN Sustainable Development Goals</p>
         </div>
 
             </div>
